I pallini vengono aggiunti in cima alla lista e vengono rimossi gli ultimi.